<resources>
    <string name="app_name">Kirfood</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_email">Email</string>
    <string name="register">Register</string>
    <string name="color">Color</string>
    <string name="Insertemail">Insert Email</string>
    <string name="insertPassword">InsertPassword</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="loginmenu">LOGIN</string>
    <string name="checkout">Checkout</string>
    <string name="textfield_label">Text Field</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="emailError">Email is not valid</string>
    <string name="passwordError">Password is not correct</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_with_social_media_account">Sign Up with social media account</string>
    <string name="registration_actionbar_label">Registration</string>
    <string name="login_actionbar_lable">Login</string>
    <string name="create_an_account_now">Create an account now</string>
    <string name="login_with">Login with social</string>
    <string name="min_ordine">Min order: </string>
    <string name="curancy"> €</string>
    <string name="restaurnt_name">Restaurant name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="view">Menu</string>
    <string name="grid">Grid</string>
    <string name="rating">Rating: </string>
    <string name="_5">/50</string>
    <string name="setting">Setting</string>
    <string name="settings">Settings</string>
    <string name="shr_filter_title">Filtrs</string>
    <string name="shr_featured_label">fasdfa</string>
    <string name="shr_apartment_label">sdfsdfsdf</string>
    <string name="shr_accessories_label">accessories</string>
    <string name="shr_shoes_label">shoes</string>
    <string name="shr_tops_label">tops</string>
    <string name="shr_bottoms_label">bottoms</string>
    <string name="shr_dresses_label">dresses</string>
    <string name="shr_account_label">account</string>
    <string name="total">Total</string>
    <string name="order_label">Order review</string>
    <string name="pay">Pay</string>
    <string name="be_careful">Be careful</string>
    <string name="remove_title">Remove</string>
    <string name="confirm">Confirm</string>
    <string name="title_social">Social</string>
    <string name="sum_social">Sum social</string>
    <string name="item_name">Item name</string>
    <string name="price">Price: €</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="check_out">CHECK OUT</string>
</resources>
