<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/home_button_menu"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/primaryColor"
        android:text="@string/home"
        android:textColor="#fff"
        app:rippleColor="@color/primaryDarkColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_button_menu"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/primaryColor"
        android:text="@string/profile"
        android:textColor="#fff"
        app:rippleColor="@color/primaryDarkColor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkout_button_menu"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/primaryColor"
        android:text="@string/check_out"
        android:textColor="#fff"
        app:rippleColor="@color/primaryDarkColor" />

</LinearLayout>