<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    android:paddingBottom="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background" />


        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurnt_name"
            android:textColor="@color/resturant_name_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_address"
            android:textSize="12sp"
            android:layout_marginStart="8dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_ordine"
                android:textSize="12sp"
                />


            <TextView
                android:id="@+id/restaurant_min_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:padding="2dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuurancy"
                android:textSize="12sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reating"
                    />

                <TextView
                    android:id="@+id/restaurant_reating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4"
                    android:padding="2dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

            </LinearLayout>

            <TextView
                android:id="@+id/view_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="bottom|end"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/view"
                android:textColor="@color/colorAccent" />
        </LinearLayout>



    </LinearLayout>


</com.google.android.material.card.MaterialCardView>