<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_label" />

        <TextView
            android:id="@+id/restaurant_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="La fraschetta" />

        <TextView
            android:id="@+id/restaurant_adress"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="La fraschetta" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp" />


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
         />

    <TextView
        android:id="@+id/total_tv"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_rv"
        tools:text="@string/total"
        android:layout_marginStart="18dp"/>


    <Button
        android:id="@+id/pay_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/pay" />


</RelativeLayout>